--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+.tt
+{
+    background-image: url("./Fhoto/background\ \(4\).png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
