branch xurshed section ay Our core values to Our students work here

--- a/src/input.css
+++ b/src/input.css
@@ -23,3 +23,11 @@
 .btnxurshed {
     border: 1px solid #FF3F3A;
 }
+
+.xbrl {
+    border-right: 1px solid gray;
+}
+
+.d2x {
+    border: 1px solid rgba(176, 176, 176, 0.662);
+}
